--- a/app/.env
+++ b/app/.env
@@ -18,3 +18,12 @@
 APP_ENV=dev
 APP_SECRET=564bdf77eb00d4f6f36f6dfa7c677f10
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
+DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/simple_shop?serverVersion=14&charset=utf8"
+###< doctrine/doctrine-bundle ###
