--- a/app/.env
+++ b/app/.env
@@ -27,3 +27,10 @@ APP_SECRET=564bdf77eb00d4f6f36f6dfa7c677f10
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
 DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/simple_shop?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=doctrine://default
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
