--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -6,17 +6,24 @@
 parameters:
 
 services:
-    # default configuration for services in *this* file
-    _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+  # default configuration for services in *this* file
+  _defaults:
+    autowire: true      # Automatically injects dependencies in your services.
+    autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/'
-        exclude:
-            - '../src/Kernel.php'
+  _instanceof:
+    App\System\CQRS\CommandHandler:
+      tags:
+        - { name: messenger.message_handler, bus: command.bus }
+    App\System\CQRS\QueryHandler:
+      tags:
+        - { name: messenger.message_handler, bus: query.bus }
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+  # makes classes in src/ available to be used as services
+  # this creates a service per class whose id is the fully-qualified class name
+  App\:
+    resource: '../src/'
+    exclude:
+      - '../src/Kernel.php'
+
+  App\System\SystemInterface: '@App\System\System'
