--- a/app/.env
+++ b/app/.env
@@ -25,7 +25,8 @@ APP_SECRET=564bdf77eb00d4f6f36f6dfa7c677f10
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
-DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/simple_shop?serverVersion=14&charset=utf8"
+#DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/simple_shop?serverVersion=14&charset=utf8"
+DATABASE_URL="mysql://symfony:ChangeMe@127.0.0.1:3306/shop?serverVersion=mariadb-10.8.3&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
