--- a/app/composer.json
+++ b/app/composer.json
@@ -7,21 +7,31 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^1.13",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.12",
+        "ramsey/uuid-doctrine": "^1.8",
         "symfony/console": "6.1.*",
         "symfony/dotenv": "6.1.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.1.*",
         "symfony/messenger": "6.1.*",
+        "symfony/property-access": "6.1.*",
         "symfony/proxy-manager-bridge": "6.1.*",
         "symfony/runtime": "6.1.*",
-        "symfony/uid": "6.1.*",
+        "symfony/serializer": "6.1.*",
+        "symfony/validator": "6.1.*",
         "symfony/yaml": "6.1.*"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-latest"
+        "phpunit/phpunit": "^9.5",
+        "roave/security-advisories": "dev-latest",
+        "symfony/browser-kit": "6.1.*",
+        "symfony/css-selector": "6.1.*",
+        "symfony/maker-bundle": "^1.44",
+        "symfony/phpunit-bridge": "^6.1",
+        "zenstruck/foundry": "^1.21"
     },
     "config": {
         "allow-plugins": {
