Created an in memory repository for Category and adding unit and integration tests to Category Value Objects

--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -27,3 +27,9 @@ services:
       - '../src/shared/Infrastructure/Kernel.php'
 
   App\Shared\Domain\System\SystemInterface: '@App\Shared\Infrastructure\System\System'
+
+  App\CategoryManagement\Domain\Repository\Categories: '@App\CategoryManagement\Infrastructure\Doctrine\ORM\DoctrineORMCategories'
+
+when@test:
+  services:
+    App\CategoryManagement\Domain\Repository\Categories: '@App\CategoryManagement\Infrastructure\InMemory\InMemoryCategories'
