--- a/app/composer.json
+++ b/app/composer.json
@@ -25,6 +25,7 @@
         "symfony/yaml": "6.1.*"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^7.1",
         "phpunit/phpunit": "^9.5",
         "roave/security-advisories": "dev-latest",
         "symfony/browser-kit": "6.1.*",
