Created single and list category methods + application tests

--- a/app/config/validator/validation.yaml
+++ b/app/config/validator/validation.yaml
@@ -1,4 +1,4 @@
-App\CategoryManagement\Application\Create\CreateCategory:
+App\CategoryManagement\Application\Command\Create\CreateCategory:
   properties:
     name:
       - Regex:
