Added base Research entity with all the Value Objects, Doctrine mappings and migrations. Added research creation functionality. Unit, functional and application tests for research management.

--- a/app/config/packages/doctrine.yaml
+++ b/app/config/packages/doctrine.yaml
@@ -17,6 +17,13 @@ doctrine:
         prefix: 'App\CategoryManagement\Domain\Entity'
         alias: Category
 
+      Research:
+        is_bundle: false
+        type: xml
+        dir: '%kernel.project_dir%/src/ResearchManagement/Resources/mapping'
+        prefix: 'App\ResearchManagement\Domain\Entity'
+        alias: Research
+
 when@prod:
   doctrine:
     orm:
